// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Melodies test suite should generate melodies based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "dur": 480,
    "midi": 68,
    "note": "G#3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "midi": 68,
    "note": "G#3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 960,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 1200,
  },
  Object {
    "dur": 360,
    "midi": 71,
    "note": "B3",
    "time": 1440,
  },
  Object {
    "dur": 120,
    "midi": 73,
    "note": "C#4",
    "time": 1800,
  },
  Object {
    "dur": 240,
    "midi": 76,
    "note": "E4",
    "time": 1920,
  },
  Object {
    "dur": 480,
    "midi": 69,
    "note": "A3",
    "time": 2160,
  },
  Object {
    "dur": 240,
    "midi": 69,
    "note": "A3",
    "time": 2640,
  },
  Object {
    "dur": 360,
    "midi": 66,
    "note": "F#3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "midi": 71,
    "note": "B3",
    "time": 3240,
  },
  Object {
    "dur": 120,
    "midi": 66,
    "note": "F#3",
    "time": 3480,
  },
  Object {
    "dur": 120,
    "midi": 64,
    "note": "E3",
    "time": 3600,
  },
  Object {
    "dur": 120,
    "midi": 62,
    "note": "D3",
    "time": 3720,
  },
  Object {
    "dur": 480,
    "midi": 68,
    "note": "G#3",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "midi": 68,
    "note": "G#3",
    "time": 4320,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 4800,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 5040,
  },
  Object {
    "dur": 480,
    "midi": 68,
    "note": "G#3",
    "time": 5280,
  },
  Object {
    "dur": 480,
    "midi": 68,
    "note": "G#3",
    "time": 5760,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 6240,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 6480,
  },
  Object {
    "dur": 480,
    "midi": 69,
    "note": "A3",
    "time": 6720,
  },
  Object {
    "dur": 320,
    "midi": 67,
    "note": "G3",
    "time": 7200,
  },
  Object {
    "dur": 160,
    "midi": 72,
    "note": "C4",
    "time": 7520,
  },
]
`;

exports[`A Melodies test suite should generate melodies based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "dur": 480,
    "midi": 69,
    "note": "A3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "midi": 71,
    "note": "B3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 960,
  },
  Object {
    "dur": 240,
    "midi": 69,
    "note": "A3",
    "time": 1200,
  },
  Object {
    "dur": 240,
    "midi": 76,
    "note": "E4",
    "time": 1440,
  },
  Object {
    "dur": 240,
    "midi": 73,
    "note": "C#4",
    "time": 1680,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "G#3",
    "time": 1920,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "G#3",
    "time": 2160,
  },
  Object {
    "dur": 480,
    "midi": 66,
    "note": "F#3",
    "time": 2400,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "G#3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "G#3",
    "time": 3120,
  },
  Object {
    "dur": 480,
    "midi": 66,
    "note": "F#3",
    "time": 3360,
  },
  Object {
    "dur": 480,
    "midi": 69,
    "note": "A3",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "midi": 71,
    "note": "B3",
    "time": 4320,
  },
  Object {
    "dur": 960,
    "midi": 76,
    "note": "E4",
    "time": 4800,
  },
  Object {
    "dur": 480,
    "midi": 79,
    "note": "G4",
    "time": 5760,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "G#3",
    "time": 5760,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "G#3",
    "time": 6000,
  },
  Object {
    "dur": 480,
    "midi": 66,
    "note": "F#3",
    "time": 6240,
  },
  Object {
    "dur": 240,
    "midi": 72,
    "note": "C4",
    "time": 6720,
  },
  Object {
    "dur": 240,
    "midi": 69,
    "note": "A3",
    "time": 6960,
  },
  Object {
    "dur": 240,
    "midi": 67,
    "note": "G3",
    "time": 7200,
  },
  Object {
    "dur": 240,
    "midi": 71,
    "note": "B3",
    "time": 7440,
  },
]
`;

exports[`A Melodies test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "dur": 480,
    "midi": 65,
    "note": "F3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "midi": 65,
    "note": "F3",
    "time": 480,
  },
  Object {
    "dur": 480,
    "midi": 65,
    "note": "F3",
    "time": 960,
  },
  Object {
    "dur": 360,
    "midi": 73,
    "note": "Db4",
    "time": 1440,
  },
  Object {
    "dur": 120,
    "midi": 80,
    "note": "Ab4",
    "time": 1800,
  },
  Object {
    "dur": 360,
    "midi": 73,
    "note": "Db4",
    "time": 1920,
  },
  Object {
    "dur": 120,
    "midi": 80,
    "note": "Ab4",
    "time": 2280,
  },
  Object {
    "dur": 360,
    "midi": 73,
    "note": "Db4",
    "time": 2400,
  },
  Object {
    "dur": 120,
    "midi": 80,
    "note": "Ab4",
    "time": 2760,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "Ab3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "midi": 68,
    "note": "Ab3",
    "time": 3120,
  },
  Object {
    "dur": 320,
    "midi": 58,
    "note": "Bb2",
    "time": 3360,
  },
  Object {
    "dur": 160,
    "midi": 61,
    "note": "Db3",
    "time": 3680,
  },
]
`;
